test/fixtures/public/fail/semantic/NotAStatement.jmm

class NotAStatement {
    public static void main(String[] args) {
        int b;
        b = 1;
        1 + 1;
        true && false;
        b;
        this;
        new int[10];
    }
}